--- a/index.html
+++ b/index.html
@@ -53,46 +53,46 @@
                 Заказать услугу
             </button>
         </section>
-        <section class="section">
+        <section class="benefits">
             <h2 class="section-title" lang="en">
                 Feature
             </h2>
             <ul class="list">
                 <li>
-                    <h3 class="item-title">
+                    <h3 class="title">
                         Внимание к деталям
                     </h3>
-                    <p class="item-inform">
+                    <p class="inform">
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li>
-                    <h3 class="item-title">
+                    <h3 class="title">
                         Пунктуальность
                     </h3>
-                    <p class="item-inform">
+                    <p class="inform">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
-                    <h3 class="item-title">
+                    <h3 class="title">
                         Планирование
                     </h3>
-                    <p class="item-inform">
+                    <p class="inform">
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
-                    <h3 class="item-title">
+                    <h3 class="title">
                         Современные технологии
                     </h3>
-                    <p class="item-inform">
+                    <p class="inform">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
             </ul>
         </section>
-        <section class="section">
+        <section class="developments">
             <h2 class="section-title">
                 Чем мы занимаемся
             </h2>
@@ -114,7 +114,7 @@
                 </li>
             </ul>
         </section>
-        <section class="section team">
+        <section class="our-team">
             <h2 class="section-title">
                 Наша команда
             </h2>
@@ -122,10 +122,10 @@
                 <li>
                     <a href="">
                         <img src="./images/team_card_1.jpg" alt="Игорь" width="270" height="250">
-                        <h3 class="item-title">
+                        <h3 class="title">
                         Игорь Демьяненко
                         </h3>
-                        <p class="item-inform" lang="en">
+                        <p class="inform" lang="en">
                             Product Designer
                         </p>
                     </a>
@@ -133,10 +133,10 @@
                 <li>
                     <a href="">
                         <img src="./images/team_card_2.jpg" alt="Ольга" width="270" height="250">
-                        <h3 class="item-title">
+                        <h3 class="title">
                             Ольга Репина
                         </h3>
-                        <p class="item-inform" lang="en">
+                        <p class="inform" lang="en">
                             Frontend Developer
                         </p>
                     </a>
@@ -144,10 +144,10 @@
                 <li>
                     <a href="">
                         <img src="./images/team_card_3.jpg" alt="Николай" width="270" height="250">
-                        <h3 class="item-title">
+                        <h3 class="title">
                             Николай Тарасов
                         </h3>
-                        <p class="item-inform" lang="en">
+                        <p class="inform" lang="en">
                             Marketing
                         </p>
                     </a>
@@ -155,10 +155,10 @@
                 <li>
                     <a href="">
                         <img src="./images/team_card_4.jpg" alt="Михаил" width="270" height="250">
-                        <h3 class="item-title">
+                        <h3 class="title">
                             Михаил Ермаков
                         </h3>
-                        <p class="item-inform" lang="en">
+                        <p class="inform" lang="en">
                             UI Designer
                         </p>
                     </a>
