--- a/portfolio.html
+++ b/portfolio.html
@@ -46,10 +46,10 @@
         </ul>
     </header>
     <main>
-        <section class="menu">
-            <h2 class="section-title" lang="en">
-                Portfolio
-            </h2>
+        <section class="catalog">
+            <h1 class="section-title" lang="en">
+               catalog
+            </h1>
             <ul class="menu-list list">
                 <li class="item">
                     <button type="button" class="btn primary">
@@ -76,70 +76,67 @@
                     </button>
                 </li>
             </ul>
-        </section>
-        <section class="catalog">
-            <h2 class="section-title" lang="en">Catalog</h2>
-            <ul class="list">
+            <ul class="catalog-lis2 list">
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370" height="294">
-                        <h3 class="title">Технокряк</h3>
+                        <h2 class="title">Технокряк</h2>
                         <p class="inform">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370" height="294">
-                        <h3 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                         <p class="inform">Дизайн</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370" height="294">
-                        <h3 class="title">Ресторан <span lang="en">Seafood</span></h3>
+                        <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
                         <p class="inform">Приложение</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370" height="294">
-                        <h3 class="title">Проект <span lang="en">Prime</span></h3>
+                        <h2 class="title">Проект <span lang="en">Prime</span></h2>
                         <p class="inform">Маркетинг</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370" height="294">
-                        <h3 class="title">Проект<span lang="en">Boxes</span></h3>
+                        <h2 class="title">Проект<span lang="en">Boxes</span></h2>
                         <p class="inform">Приложение</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370" height="294">
-                        <h3 class="title" lang="en">Inspiration has no Borders</h3>
+                        <h2 class="title" lang="en">Inspiration has no Borders</h2>
                         <p class="inform">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370" height="294">
-                        <h3 class="title">Издание<span lang="en">Limited Edition</span></h3>
+                        <h2 class="title">Издание<span lang="en">Limited Edition</span></h2>
                         <p class="inform">Дизайн</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370" height="294">
-                        <h3 class="title">Проект<span lang="en">LAB</span></h3>
+                        <h2 class="title">Проект<span lang="en">LAB</span></h2>
                         <p class="inform">Маркетинг</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370" height="294">
-                        <h3 class="title" lang="en">Growing Business</h3>
+                        <h2 class="title" lang="en">Growing Business</h2>
                         <p class="inform">Приложение</p>
                     </a>
                 </li>
