--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
             <ul class="list">
                 <li>
                     <a href="#">
-                        <img src="./images/what-we-do1.jpg" alt="написание_программы" width="370" height="294">
+                        <img src="./images/what-we-do1.jpg" alt="написание_программы" width="370">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="./images/what-we-do2.jpg" alt="Решение" width="370" height="294">
+                        <img src="./images/what-we-do2.jpg" alt="Решение" width="370">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="./images/what-we-do3.jpg" alt="Оптимизация" width="370" height="294">
+                        <img src="./images/what-we-do3.jpg" alt="Оптимизация" width="370">
                     </a>
                 </li>
             </ul>
@@ -127,7 +127,7 @@
             </h2>
             <ul class="list">
                 <li>
-                    <img src="./images/team_card_1.jpg" alt="Игорь" width="270" height="250">
+                    <img src="./images/team_card_1.jpg" alt="Игорь" width="270">
                     <h3 class="title">
                         Игорь Демьяненко
                     </h3>
@@ -136,7 +136,7 @@
                     </p>
                 </li>
                 <li>
-                    <img src="./images/team_card_2.jpg" alt="Ольга" width="270" height="250">
+                    <img src="./images/team_card_2.jpg" alt="Ольга" width="270">
                     <h3 class="title">
                         Ольга Репина
                     </h3>
@@ -145,7 +145,7 @@
                     </p>
                 </li>
                 <li>
-                    <img src="./images/team_card_3.jpg" alt="Николай" width="270" height="250">
+                    <img src="./images/team_card_3.jpg" alt="Николай" width="270">
                     <h3 class="title">
                         Николай Тарасов
                     </h3>
@@ -154,7 +154,7 @@
                     </p>
                 </li>
                 <li>
-                    <img src="./images/team_card_4.jpg" alt="Михаил" width="270" height="250">
+                    <img src="./images/team_card_4.jpg" alt="Михаил" width="270">
                     <h3 class="title">
                         Михаил Ермаков
                     </h3>
