--- a/portfolio.html
+++ b/portfolio.html
@@ -85,63 +85,63 @@
             <ul class="catalog-list list">
                 <li class="item">
                     <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370" height="294">
+                        <img class="image" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370">
                         <h2 class="title">Технокряк</h2>
                         <p class="inform">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370" height="294">
+                        <img class="image" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370">
                         <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                         <p class="inform">Дизайн</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370" height="294">
+                        <img class="image" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370">
                         <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
                         <p class="inform">Приложение</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370" height="294">
+                        <img class="image" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370">
                         <h2 class="title">Проект <span lang="en">Prime</span></h2>
                         <p class="inform">Маркетинг</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370" height="294">
+                        <img class="image" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370">
                         <h2 class="title">Проект<span lang="en">Boxes</span></h2>
                         <p class="inform">Приложение</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370" height="294">
+                        <img class="image" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370">
                         <h2 class="title" lang="en">Inspiration has no Borders</h2>
                         <p class="inform">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370" height="294">
+                        <img class="image" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370">
                         <h2 class="title">Издание<span lang="en">Limited Edition</span></h2>
                         <p class="inform">Дизайн</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370" height="294">
+                        <img class="image" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370">
                         <h2 class="title">Проект<span lang="en">LAB</span></h2>
                         <p class="inform">Маркетинг</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
-                        <img class="image" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370" height="294">
+                        <img class="image" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370">
                         <h2 class="title" lang="en">Growing Business</h2>
                         <p class="inform">Приложение</p>
                     </a>
